--- a/wow_panda/pubspec.yaml
+++ b/wow_panda/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   ##
   http: ^0.13.4
+  firebase_core: ^1.20.0
+  firebase_auth: ^3.5.1
 
 dev_dependencies:
   flutter_test:
