--- a/wow_panda/pubspec.yaml
+++ b/wow_panda/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http: ^0.13.4
   firebase_core: ^1.20.0
   firebase_auth: ^3.5.1
+  cloud_firestore: ^3.4.3
 
 dev_dependencies:
   flutter_test:
