--- a/wow_panda/pubspec.yaml
+++ b/wow_panda/pubspec.yaml
@@ -14,9 +14,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   ##
   http: ^0.13.4
-  firebase_core: ^1.20.0
-  firebase_auth: ^3.5.1
-  cloud_firestore: ^3.4.3
+  firebase_core: 1.18.0
+  firebase_auth: 3.3.20
+  cloud_firestore: 3.1.18
 
 dev_dependencies:
   flutter_test:
