--- a/wow_panda/pubspec.yaml
+++ b/wow_panda/pubspec.yaml
@@ -13,10 +13,14 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   ##
+
+  firebase_auth: ^3.6.2
+  firebase_core: ^1.20.0
+  cloud_firestore: ^3.4.3
+  ##
   http: ^0.13.4
-  firebase_core: 1.18.0
-  firebase_auth: 3.3.20
-  cloud_firestore: 3.1.18
+  faker: ^2.0.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
