--- a/wow_panda/pubspec.yaml
+++ b/wow_panda/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   http: ^0.13.4
   faker: ^2.0.0
   provider: ^6.0.3
+  easy_localization: ^3.0.1
+  rxdart: ^0.27.5
 
 dev_dependencies:
   flutter_test:
@@ -30,3 +32,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/languages/
