--- a/wow_panda/pubspec.yaml
+++ b/wow_panda/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   provider: ^6.0.3
   easy_localization: ^3.0.1
   rxdart: ^0.27.5
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
