--- a/wow_panda/pubspec.yaml
+++ b/wow_panda/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   easy_localization: ^3.0.1
   rxdart: ^0.27.5
   dio: ^4.0.6
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
